ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: front-end.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 8081
    - host: broker-service.info
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: broker-service
                port:
                  number: 8080
    - host: localhost
      http:
        paths:
          - path: /mail/?(.*)
            pathType: Prefix
            backend:
              service:
                name: mailhog
                port:
                  number: 8025
    - host: localhost
      http:
        paths:
          - path: /mongo/?(.*)
            pathType: Prefix
            backend:
              service:
                name: mongo-express
                port:
                  number: 8082
